--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Proj. JS Vanilla: SERGIO LECUONA</title>
+    <script type="module" src="js/vistas/main_p1.js"></script>
 </head>
 <body>
-    <h1>TEST</h1>
+    <div id="container_main">
+    </div>
 </body>
 </html>
